# datadiff_fuzz_lab

./: .gitignore  README.md  REPRODUCE.md  pyproject.toml  实验设计大纲.md
.github/workflows/: ci.yml
bugs/bug_9b4d1fa7aac3b391/: config.json  environment.json  findings.json  normalized.json  reduced_case.json  (+9 more)
reports/: datafusion-topk-null-sortkey-preflight.txt  datafusion-upstream-issue-bundle.tar.gz.sha256  datafusion-upstream-issue-checklist.md  icse-methodology-roadmap.md  lscpu-ubuntu.txt  pattern-variants-null_agg_topk-experiment-20260514T195546.csv  pattern-variants-null_agg_topk-experiment-20260514T195546.md  pip-freeze-ubuntu.txt  target-registry-ubuntu.json  ubuntu-datafusion-artifact-bundle.tar.gz.sha256  ubuntu-datafusion-artifact-manifest.json  ubuntu-datafusion-confirmation.md  uname-ubuntu.txt
scripts/: analyze_medium_experiments.py  build_ubuntu_artifact_bundle.py  build_upstream_issue_bundle.py  datafusion_topk_null_sortkey_preflight.py  triage_candidate_bugs.py
tests/: test_ablation_audit.py  test_artifact_bundle.py  test_classification_oracle.py  test_cli.py  test_datagen.py  test_experiment_analysis.py  test_faulty_backend.py  test_feedback.py  test_guidance.py  test_metamorphic.py  test_methodology_contracts.py  test_mutator.py  test_normalizer.py  test_oracle.py  test_pattern_analysis.py  test_preflight.py  test_quality_oracles.py  test_reducer.py  test_regression_findings.py  test_reporter.py  test_runner.py  test_seeded_analysis.py  test_targets.py  test_triage.py  test_ubuntu_artifact_manifest.py  test_upstream_issue_bundle.py  test_util.py
(+38 files in other folders)
